# fred-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
fred-rs/: Cargo.toml
fred-rs/src/: category.rs  client.rs  lib.rs  releases.rs  series.rs  source.rs  sources.rs  tags.rs
fred-rs/src/category/: children.rs  mod.rs  related.rs
fred-rs/src/release/: series.rs  tags.rs
fred-rs/src/releases/: mod.rs
fred-rs/src/series/: categories.rs  mod.rs  observation.rs  release.rs  tags.rs  updates.rs  vintagedates.rs
fred-rs/src/series/search/: mod.rs  related_tags.rs  tags.rs
fred-rs/src/source/: releases.rs
fred-rs/src/tags/: series.rs
src/: client.rs  error.rs  lib.rs  related_tags.rs  sources.rs
src/category/: children.rs  mod.rs  related.rs  related_tags.rs  series.rs  tags.rs
src/release/: mod.rs  related_tags.rs  series.rs  sources.rs  tables.rs  tags.rs
src/releases/: dates.rs  mod.rs
src/series/: categories.rs  mod.rs  observation.rs  release.rs  tags.rs  updates.rs  vintagedates.rs
src/series/search/: mod.rs  related_tags.rs  tags.rs
src/source/: mod.rs  releases.rs
src/tags/: mod.rs  series.rs
