[package]
name = "fred-rs"
version = "0.1.0"
authors = ["Matthew Sabo <matthewdsabo@gmail.com>"]
license = "MIT"
description = "An interface for accessing the St. Louis Fed's FRED API"
repository = "https://github.com/mdsabo/fred-rs"
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-MIT"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["blocking", "json"] }
serde_json = "1.0.47"
serde = { version = "1.0.104", features = ["derive"] }
